# VQLab

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  teaching_use.yml
.github/workflows/: test.yml
configs/: qkd_metro_ingaas.yaml  qkd_metro_snspd.yaml
demos/: c1_configurator.py  m0_qber_demo.py  m0_validation.py  m1_engine_skr.py  m1_rusca_validation.py  m2_tuning_loop.py  m3_bloch_validation.py  m3_magnetometer.py  m4_bell_device.py  m4_rb.py
docs/: 01_architecture_and_bom.md  02_simulator_kernel_spec.md  03_bob_gating_board.md  04_system_integration.md  _phone.css
gui/: README.md  __init__.py  index.html  screenshot.py  server.py
hardware/alice_laser_driver/: README.md  alice_driver.cir  simulate.py  validate_with_qsim.py
hardware/bob_fpga/: README.md  bob_gating.v  sim.py  sim_main.cpp  validate_with_qsim.py
hardware/bob_gating_board/: BOM.md  bob_channel.net  layout.py  schematic.py  sd_frontend.cir  simulate.py  validate_with_qsim.py
hardware/system_integration/: README.md  integrate.py  timing_budget.py
notebooks/: M0_qber_demo.ipynb  M2_tuning_loop.ipynb
qsim/: __init__.py  __main__.py
qsim/configurator/: __init__.py  catalog.py  compile.py  registry.py  report.py  spec.py
qsim/core/: __init__.py  backends.py  block.py  calibration.py  graph.py  impairments.py  probes.py  scenario.py  scheduler.py  signals.py  sweep.py
qsim/profiles/: ingaas_spad.yaml  rb_magnetometer.yaml  transmon_2q.yaml
qsim/qchw/: __init__.py  backend.py  blocks.py  cliffords.py  metrics.py  rb.py  reference.py  (+3 more)
scenarios/: bell_device_2q.yaml  decoy_bb84_25km.yaml  magnetometer_rb.yaml  qrng_balanced.yaml  rb_transmon.yaml
tests/: test_alice_driver.py  test_cli.py  test_configurator.py  test_decoy_engine.py  test_finite_key.py  test_firmware.py  test_gui.py  test_layout.py  test_m0.py  test_qchw.py  test_qrng.py  test_scenario.py  test_sensing.py  test_sweep.py  test_system_integration.py  test_validation.py
(+28 files in other folders)
