[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qsim"
version = "0.1.0"
description = "Open-source, device-level quantum-technology simulation platform + QKD reference design"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "pyyaml>=6.0",
    "pytest>=7",                   # the validation suite is part of the credibility story
]

[project.optional-dependencies]
gui = ["flask>=2.2"]               # the virtual-bench web GUI (gui/)
# QuTiP is NOT a dependency: the sensing (M3) and qc-hardware (M4) backends use a transparent
# numpy dense-rho engine (exact for the 1-2 qubit / spin regimes). QuTiP/sparse is the
# documented swap-in for large-n qc-hardware only.
quantum = ["qutip>=4.7"]
dev = ["playwright>=1.40"]         # only for the GUI screenshot tool (gui/screenshot.py)

[tool.setuptools.packages.find]
include = ["qsim*"]

[tool.setuptools.package-data]
qsim = ["profiles/*.yaml"]

[tool.pytest.ini_options]
# Tests under tests/ import sibling source dirs (hardware/, gui/) that are not
# installed as packages — add the repo root to sys.path so plain `pytest -q`
# works the same as `python -m pytest -q`.
pythonpath = ["."]

